--- a/bankapp2/Dockerfile
+++ b/bankapp2/Dockerfile
@@ -2,7 +2,7 @@
 FROM openjdk:21
 
 # Set the working directory in the container
-WORKDIR /usr/src/app
+WORKDIR /usr/src/
 
 # Copy the JAR file into the container at /usr/src/app
 COPY target/bankapp2-0.0.1-SNAPSHOT.jar /usr/src/app
